methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:18: warning: enclosing method run has result type Unit: return value discarded
    return vuBiscuit
    ^MethodsReturning:25: warning: enclosing method run has result type Unit: return value discarded
return vuBiscuit
^MethodsReturning:13: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsReturning'
override def run() {
             ^